opam-version: "1.2"
name: "ipl-ast"
version: "1.0"
synopsis: "Imandra Protocol Language ml AST"
maintainer: "Ewen Maclean <ewen@aestheticintegration.com>"
authors: "Ewen Maclean <ewen@aestheticintegration.com>"
homepage: "https://github.com/imandra-ai/ipl-ast"
bug-reports: "https://github.com/imandra-ai/ipl-ast/issues"
license: "APACHE-2.0"
doc: "https://github.com/imandra-ai/ipl-ast"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "containers"
]
