opam-version: "1.2"
name: "ipl_ast"
version: "1.0"
maintainer: "Ewen Maclean <ewen@aestheticintegration.com>"
authors: "Ewen Maclean <ewen@aestheticintegration.com>"
homepage: "https://github.com/AestheticIntegration/ipl_ast"
bug-reports: "https://github.com/AestheticIntegration/ipl_ast/issues"
license: "APACHE-2.0"
dev-repo: "https://github.com/AestheticIntegration/ipl_ast"
doc: "https://github.com/AestheticIntegration/ipl_ast"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "containers"
]
